<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:myapp="http://schemas.android.com/tools">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/myprofile"
        android:orderInCategory="100"
        android:title="@string/MyProfile"
        app:showAsAction="never" />
    <item
        android:id="@+id/status"
        android:orderInCategory="100"
        android:title="@string/Mystatus"
        app:showAsAction="never" />

    <item
        android:id="@+id/Logout"
        android:orderInCategory="100"
        android:title="@string/Logout"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search_24dp"
        android:title="@string/action_search"
        app:showAsAction="ifRoom"
        android:actionViewClass="android.support.v7.widget.SearchView"></item>

       <!--<item
        android:id="@+id/action_share"
        android:orderInCategory="200"
        android:title="Search"
        android:icon="@drawable/ic_menu_share"
        app:showAsAction="ifRoom"
        ></item>-->
    <item
        android:id="@+id/action_add_favourite"
        android:orderInCategory="200"
        android:title="@string/Favourite"
        android:icon="@drawable/ic_favorite_border_white_24dp"
        app:showAsAction="ifRoom"
        ></item>


<!--    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        myapp:showAsAction="ifRoom|collapseActionView"
        myapp:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        myapp:actionViewClass="android.support.v7.widget.SearchView"/>-->

    <!--<item
        android:id="@+id/action_search"
        android:orderInCategory="200"
        android:title="Search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom"
        android:actionViewClass="android.widget.SearchView"></item>-->



<!--    <item
        android:id="@+id/action_search"
        android:orderInCategory="200"
        android:title="Search"
        android:icon="@drawable/ic_search"
        app:actionViewClass="android.support.v7.widget.SearchView"/>-->

    <!--   <item
        android:id="@+id/action_search"
        android:orderInCategory="200"
        android:title="Search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom"
        ></item>
    <item
        android:id="@+id/action_user"
        android:orderInCategory="300"
        android:title="User"
        android:icon="@drawable/ic_user"
        app:showAsAction="ifRoom"></item>-->

</menu>
